tests/snapshots/codegen_snapshot_tests__newtype_builder_methods.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 4440
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug)]
struct Response(pub String);
impl incan_stdlib::reflection::HasTypeClassName for Response {
    fn __class_name__() -> &'static str {
        "Response"
    }
}
impl Response {
    pub fn ok() -> Response {
        return Response("200 OK".to_string());
    }
    pub fn created() -> Response {
        return Response("201 Created".to_string());
    }
    pub fn status(code: i64, body: String) -> Response {
        return Response(
            incan_stdlib::strings::str_concat(
                &incan_stdlib::strings::str_concat(&code.to_string(), &" "),
                &body,
            ),
        );
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let r1 = Response::ok();
    let r2 = Response::created();
    let r3 = Response::status(404, "Not Found".to_string());
    let _ = println!("{}", r1.0);
    let _ = println!("{}", r2.0);
    let _ = println!("{}", r3.0);
}
fn main() {
    main();
}
