tests/snapshots/codegen_snapshot_tests__newtype_generic_builder_methods.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 4475
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug)]
struct Box<T>(pub T);
impl<T> incan_stdlib::reflection::HasTypeClassName for Box<T> {
    fn __class_name__() -> &'static str {
        "Box"
    }
}
impl<T: Clone> Box<T> {
    pub fn wrap(value: T) -> Self {
        return Box(value);
    }
    pub fn duplicate(&self) -> (T, T) {
        return (self.0.clone(), self.0.clone());
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let boxed = Box::wrap(42);
    let _ = println!("{}", boxed.duplicate());
}
fn main() {
    main();
}
